	* configs/pic32-starterkit: Beginning of a configuration for the Microchip
	  PIC32 Ethernet Starter Kit.  Hmmm.. I don't have a clue how to test this
	  with no serial port?!
	* lib/stdio/lib_fclose.c: fclose() always returns an error (EOF) when it
	  closes a read-only file.  This is because it calls flush() which will
	  fail on read-only files.  No harm is done other that a bad value is
	  returned.
	* arch/sim/src/Makefile: Correct build issue for sim/nsh2 target.  Old
	  libboard.a was not being cleaned.
	* arch/mips/src/pic32mx/pic32mx-gpio*.c:  Add GPIO support for the PIC32MX.
	* configs/sure-pic32mx/src/up_leds.c and up_buttons.c:  Add button and LED
	  support for the Sure Electronics PIC32MX board.
	* configs/ea3152:  Add a configuration for the Embedded Artists LPC3152
	  daughter board (with the same base-board used with configs/ea3131)
	* graphics/nxmu/nx_getrectangle.c, graphics/nxsu/nx_getrectangle.c,
	  graphics/mxtk/nx_getwindow.c, graphics/nxmu/nx_gettoobar.c:  New
	  interfaces to read from graphics memory
	* graphics/nxbe/nxbe_bitmap.c: Fix an error in the error handling that
	  can cause valid bitmaps to fail to render.
	* include/nuttx/rgbcolors.h: Fix errors in some 16- and 8-bit color
	  conversion macros.
	* tools/incdir.sh: Fix issues when g++ is used as the compiler.  It was
	  not being recognized and handled properly.
	* graphics/nxsu/nx_releasebkgdg.c: Fix a bad cast that was causing
	  problems with the backgournd window was released.
	* fs/nxffs/nxffs_pack.c:  Correct a critical bug in the NXFFS file system:
	  When repacking the filesystem, there was a missing check to see if an
	  inode structure would fit at the end of a block.  This is a rare case
	  if the block size is large, but can be common for tiny block sizes
	  and results in a crash and file system corruption.
	* fs/nxffs/nxffs_initialize.c:  Fix an initialize error.  If the FLASH
	  is on power-up, NXFFS will fail to initialize correctly.
